# ai-mas-hse-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tas_config.sh
ai_mas_hse_project/data/final_dataset/: list_dict_with_tasks.pkl
ai_mas_hse_project/data/html_delete/: 105072.html  105120.html  108978.html  109436.html  111644.html  115450.html  116226.html  116990.html  30321.html  30419.html  30722.html  34872.html  35129.html  35479.html  60336.html  60345.html  60382.html  60384.html  60402.html  60450.html  64833.html  64891.html  65265.html  65267.html  65312.html  65315.html  65785.html  66038.html  66354.html  66720.html  67443.html  76414.html  76429.html  78025.html  78726.html
ai_mas_hse_project/data/html_source/: 102999.html  103822.html  104102.html  104122.html  105085.html  105103.html  105197.html  107706.html  109027.html  109483.html  111261.html  111262.html  111357.html  111895.html  115444.html  115968.html  116023.html  116439.html  116445.html  116528.html  116534.html  116563.html  116684.html  116797.html  116799.html  116875.html  116883.html  116885.html  30262.html  30289.html  30320.html  30322.html  30325.html  30341.html  30346.html  30364.html  30431.html  30690.html  30697.html  30699.html  (+73 more)
ai_mas_hse_project/data/llm_results/: tasks_result_liquidai_06_01_2025.pkl
ai_mas_hse_project/notebooks/: 1-create-dataset.ipynb  2-eda.ipynb  3-agent-baseline.ipynb  3-agent-tutorial.ipynb  4-agent-baseline.ipynb  output.json  parser.py  test.ipynb
ai_mas_hse_project/src/: create_dataset.py  create_dataset_test.py
references/: README.md
