[project]
name = "ai-mas-hse-project"
version = "0.1.0"
description = "Multi-agent system for verification math solutions"
authors = [
    {name = "Andrey Timonin",email = "an-timwork@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
package-mode = false
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "dvc (>=3.65.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "clearml (>=2.1.1,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "boto3 (>=1.42.19,<2.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "openai (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
format = { docstring-code-format = true }

# Игнорировать проверки кириллицы
ignore = ["RUF002", "RUF003", "PLR0913"]

# Игнорирую из-за особенностей моего проекта
[tool.ruff.lint.per-file-ignores]
"run_training.py" = ["E402"]

[tool.ruff.lint]
select = [
    # isort - джентельменский набор
    "I",
    # pycodestyle - джентельменский набор
    "E", "W",
    # Pyflakes - джентельменский набор
    "F",
    # pyupgrage
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-builtins
    "A",
    # flake8-return
    "RET",
    # flake8-use-pathlib
    "PTH",
    # flynt
    "FLY",
    # mccabe
    "C90",
    # NumPy-specific rules
    "NPY",
    # pep8-naming
    "N",
    # Ruff-specific rules
    "RUF",
    # Pyling - very strict, may be use when have enough time
    # "PL",
    # refurb - also may be overwhelming
    # "FURB"
]


pycodestyle = { max-doc-length = 120 }
