[tool.poetry]
name = "ai-mas-hse-project"
version = "0.1.0"
description = "Multi-agent system for verification math solutions"
authors = ["Andrey Timonin <an-timwork@yandex.ru>"]
readme = "README.md"
package-mode = false # Чтоб не создавался пакет

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pandas = "^2.3.3"
numpy = "^2.3.5"
ipykernel = "^7.1.0"
torch = "^2.9.1"
torchvision = "^0.24.1"
torchmetrics = "^1.8.2"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
pre-commit = "^4.5.0"
dvc = "^3.64.0"
boto3 = "^1.41.5"
botocore = "^1.41.5"
s3transfer = "^0.15.0"
dvc-s3 = "^3.2.2"
aiohttp = "^3.13.2"
pytorch-lightning = "^2.6.0"
tensorboardx = "^2.6.4"
tensorboard = "^2.20.0"
hydra-core = "^1.3.2"
loguru = "^0.7.3"
mlflow = "^3.7.0"
langchain = "^1.2.0"
langgraph = "^1.0.5"
openai = "^2.14.0"
langchain-openai = "^1.1.6"
langchain-community = "^0.4.1"
transformers = "^4.57.3"
langchain-huggingface = "^1.2.0"
langchain-mcp-adapters = "^0.2.1"
langsmith = "^0.6.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
format = { docstring-code-format = true }

# Игнорировать проверки кириллицы
ignore = [
    "PLR0913",
    "I001",  # Несортированные импорты
    "F401",  # Неиспользуемые импорты
    "RUF001",  # Амбигуозные кириллические символы
    "SIM108",  # Упрощение if-else
    "C901",  # Сложность функции
    "B005",  # strip с несколькими символами
    "PTH123",  # Path.open вместо open
    "RET505",  # Лишний else после return
    "RUF002",  # Ambiguous characters (дополнительно)
    "RUF003",  # Ambiguous characters (дополнительно)
    "UP015",
    "RET504",
    "F541",
    "F841",
    "E501",
    "B007",
    "RET503",
    "RUF019"
    ]

# Игнорирую из-за особенностей моего проекта
[tool.ruff.lint.per-file-ignores]
"run_training.py" = ["E402"]

[tool.ruff.lint]
select = [
    # isort - джентельменский набор
    "I",
    # pycodestyle - джентельменский набор
    "E", "W",
    # Pyflakes - джентельменский набор
    "F",
    # pyupgrage
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-builtins
    "A",
    # flake8-return
    "RET",
    # flake8-use-pathlib
    "PTH",
    # flynt
    "FLY",
    # mccabe
    "C90",
    # NumPy-specific rules
    "NPY",
    # pep8-naming
    "N",
    # Ruff-specific rules
    "RUF",
    # Pyling - very strict, may be use when have enough time
    # "PL",
    # refurb - also may be overwhelming
    # "FURB"
]


pycodestyle = { max-doc-length = 120 }
